--- a/KhTracker/App.config
+++ b/KhTracker/App.config
@@ -220,16 +220,16 @@
             <setting name="AutoSaveProgress2" serializeAs="String">
                 <value>False</value>
             </setting>
-            <setting name="BroadcastWindowX" serializeAs="String">
+            <setting name="GridWindowX" serializeAs="String">
                 <value>0</value>
             </setting>
-            <setting name="BroadcastWindowY" serializeAs="String">
+            <setting name="GridWindowY" serializeAs="String">
                 <value>0</value>
             </setting>
-            <setting name="BroadcastWindowWidth" serializeAs="String">
+            <setting name="GridWindowWidth" serializeAs="String">
                 <value>500</value>
             </setting>
-            <setting name="BroadcastWindowHeight" serializeAs="String">
+            <setting name="GridWindowHeight" serializeAs="String">
                 <value>680</value>
             </setting>
         </KhTracker.Properties.Settings>
