--- a/KhTracker/KhTracker.csproj
+++ b/KhTracker/KhTracker.csproj
@@ -329,6 +329,19 @@
     <Content Include="CustomImages\Progression\agrabah\elemental_lords.png" />
     <Content Include="CustomImages\Progression\agrabah\jafar.png" />
     <Content Include="CustomImages\Progression\agrabah\lexaeus.png" />
+    <Resource Include="Images\Progression\Min\land_of_dragons\xigbar_griddata.png" />
+    <Resource Include="Images\Progression\Min\olympus_coliseum\zexion_griddata.png" />
+    <Resource Include="Images\Progression\Min\port_royal\luxord_griddata.png" />
+    <Resource Include="Images\Progression\Min\pride_lands\saix_griddata.png" />
+    <Resource Include="Images\Progression\Min\simulated_twilight_town\roxas_griddata.png" />
+    <Resource Include="Images\Progression\Min\space_paranoids\larxene_griddata.png" />
+    <Resource Include="Images\Progression\Min\the_world_that_never_was\xemnas_griddata.png" />
+    <Resource Include="Images\Progression\Min\twilight_town\axel_griddata.png" />
+    <Resource Include="Images\Progression\Min\hollow_bastion\demyx_griddata.png" />
+    <Resource Include="Images\Progression\Min\halloween_town\vexen_griddata.png" />
+    <Resource Include="Images\Progression\Min\disney_castle\marluxia_griddata.png" />
+    <Resource Include="Images\Progression\Min\beast%27s_castle\xaldin_griddata.png" />
+    <Resource Include="Images\Progression\Min\agrabah\lexaeus_griddata.png" />
     <Resource Include="Images\Progression\Min\disney_castle\marluxiadata_and_lingering_will.png" />
     <Resource Include="Images\Progression\Min\absent.png" />
     <Content Include="CustomImages\Progression\agrabah\lexaeusdata.png" />
