boss enemy support

--- a/KhTracker/KhTracker.csproj
+++ b/KhTracker/KhTracker.csproj
@@ -343,6 +343,24 @@
     <Content Include="CustomImages\Progression\agrabah\elemental_lords.png" />
     <Content Include="CustomImages\Progression\agrabah\jafar.png" />
     <Content Include="CustomImages\Progression\agrabah\lexaeus.png" />
+    <Resource Include="Images\Progression\Min\the_world_that_never_was\FinalXemnas.png" />
+    <Resource Include="Images\Progression\Min\the_world_that_never_was\ArmoredXemnas2.png" />
+    <Resource Include="Images\Progression\Min\the_world_that_never_was\ArmoredXemnas1.png" />
+    <Resource Include="Images\Progression\Min\simulated_twilight_town\Vivi.png" />
+    <Resource Include="Images\Progression\Min\simulated_twilight_town\Setzer.png" />
+    <Resource Include="Images\Progression\Min\simulated_twilight_town\Seifer.png" />
+    <Resource Include="Images\Progression\Min\simulated_twilight_town\Hayner.png" />
+    <Resource Include="Images\Progression\Min\olympus_coliseum\Yuffie.png" />
+    <Resource Include="Images\Progression\Min\olympus_coliseum\Tifa.png" />
+    <Resource Include="Images\Progression\Min\olympus_coliseum\Leon.png" />
+    <Resource Include="Images\Progression\Min\olympus_coliseum\Hercules.png" />
+    <Resource Include="Images\Progression\Min\olympus_coliseum\Cloud.png" />
+    <Resource Include="Images\Progression\Min\land_of_dragons\Riku.png" />
+    <Resource Include="Images\Progression\Min\beast%27s_castle\ShadowStalker.png" />
+    <Resource Include="Images\Progression\Min\agrabah\VolcanoLord.png" />
+    <Resource Include="Images\Progression\Min\agrabah\BlizzardLord.png" />
+    <Resource Include="Images\Grid\simple\MunnyPouch2.png" />
+    <Resource Include="Images\Grid\simple\MunnyPouch1.png" />
     <Resource Include="Images\Progression\Min\land_of_dragons\xigbar_griddata.png" />
     <Resource Include="Images\Progression\Min\olympus_coliseum\zexion_griddata.png" />
     <Resource Include="Images\Progression\Min\port_royal\luxord_griddata.png" />
