--- a/KhTracker/KhTracker.csproj
+++ b/KhTracker/KhTracker.csproj
@@ -344,6 +344,7 @@
     <Content Include="CustomImages\Progression\agrabah\elemental_lords.png" />
     <Content Include="CustomImages\Progression\agrabah\jafar.png" />
     <Content Include="CustomImages\Progression\agrabah\lexaeus.png" />
+    <Resource Include="Images\Progression\Min\the_world_that_never_was\finalxemnas_griddata.png" />
     <Resource Include="Images\Progression\Min\the_world_that_never_was\FinalXemnas.png" />
     <Resource Include="Images\Progression\Min\the_world_that_never_was\ArmoredXemnas2.png" />
     <Resource Include="Images\Progression\Min\the_world_that_never_was\ArmoredXemnas1.png" />
