Auto Load Hints
Allows the tracker to automatically load a seed's settings from a user-defined OpenKH Mod Manager.

--- a/KhTracker/App.config
+++ b/KhTracker/App.config
@@ -220,6 +220,9 @@
             <setting name="AutoSaveProgress2" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="AutoLoadHints" serializeAs="String">
+                <value>False</value>
+            </setting>
         </KhTracker.Properties.Settings>
     </userSettings>
   <runtime>
