--- a/.gitignore
+++ b/.gitignore
@@ -337,3 +337,6 @@ MigrationBackup/
 /KhTracker/Images/ReportTest3.png
 /KhTracker/Images/ReportTest2.png
 /KhTracker/Images/ReportTest1.png
+
+# Remove Obsidian
+KHTrackerNotes/
