add toggle to save settings on upload

--- a/KhTracker/App.config
+++ b/KhTracker/App.config
@@ -269,6 +269,9 @@
             <setting name="GridWindowBattleshipLogic" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="SavePreviousGridSetting" serializeAs="String">
+                <value>True</value>
+            </setting>
         </KhTracker.Properties.Settings>
     </userSettings>
   <runtime>
