Fix Window Visibility Bug

--- a/KhTracker/App.config
+++ b/KhTracker/App.config
@@ -272,6 +272,18 @@
             <setting name="SavePreviousGridSetting" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="GridOptionsWindowX" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="GridOptionsWindowY" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="GridOptionsWindowHeight" serializeAs="String">
+                <value>1000</value>
+            </setting>
+            <setting name="GridOptionsWindowWidth" serializeAs="String">
+                <value>500</value>
+            </setting>
         </KhTracker.Properties.Settings>
     </userSettings>
   <runtime>
