sonic image inclusion start

--- a/KhTracker/App.config
+++ b/KhTracker/App.config
@@ -284,6 +284,12 @@
             <setting name="GridOptionsWindowWidth" serializeAs="String">
                 <value>500</value>
             </setting>
+            <setting name="TelevoIcons" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="SonicIcons" serializeAs="String">
+                <value>False</value>
+            </setting>
         </KhTracker.Properties.Settings>
     </userSettings>
   <runtime>
