--- a/KhTracker/KhTracker.csproj
+++ b/KhTracker/KhTracker.csproj
@@ -344,6 +344,20 @@
     <Content Include="CustomImages\Progression\agrabah\elemental_lords.png" />
     <Content Include="CustomImages\Progression\agrabah\jafar.png" />
     <Content Include="CustomImages\Progression\agrabah\lexaeus.png" />
+    <Resource Include="Images\Progression\Old\agrabah\BlizzardLord.png" />
+    <Resource Include="Images\Progression\Old\agrabah\VolcanoLord.png" />
+    <Resource Include="Images\Progression\Old\the_world_that_never_was\ArmoredXemnas2.png" />
+    <Resource Include="Images\Progression\Old\the_world_that_never_was\ArmoredXemnas1.png" />
+    <Resource Include="Images\Progression\Old\simulated_twilight_town\Vivi.png" />
+    <Resource Include="Images\Progression\Old\simulated_twilight_town\Setzer.png" />
+    <Resource Include="Images\Progression\Old\simulated_twilight_town\Seifer.png" />
+    <Resource Include="Images\Progression\Old\simulated_twilight_town\Hayner.png" />
+    <Resource Include="Images\Progression\Old\the_world_that_never_was\FinalXemnas.png" />
+    <Resource Include="Images\Progression\Old\olympus_coliseum\yuffie.png" />
+    <Resource Include="Images\Progression\Old\olympus_coliseum\tifa.png" />
+    <Resource Include="Images\Progression\Old\olympus_coliseum\leon.png" />
+    <Resource Include="Images\Progression\Old\olympus_coliseum\hercules.png" />
+    <Resource Include="Images\Progression\Old\olympus_coliseum\cloud.png" />
     <Resource Include="Images\Progression\Min\the_world_that_never_was\finalxemnas_griddata.png" />
     <Resource Include="Images\Progression\Min\the_world_that_never_was\FinalXemnas.png" />
     <Resource Include="Images\Progression\Min\the_world_that_never_was\ArmoredXemnas2.png" />
