--- a/KhTracker/KhTracker.csproj
+++ b/KhTracker/KhTracker.csproj
@@ -344,6 +344,10 @@
     <Content Include="CustomImages\Progression\agrabah\elemental_lords.png" />
     <Content Include="CustomImages\Progression\agrabah\jafar.png" />
     <Content Include="CustomImages\Progression\agrabah\lexaeus.png" />
+    <Resource Include="Images\Progression\Old\the_world_that_never_was\xemans.png" />
+    <Resource Include="Images\Progression\Old\the_world_that_never_was\data_final_xemnas.png" />
+    <Resource Include="Images\Progression\Old\beast%27s_castle\ShadowStalker.png" />
+    <Resource Include="Images\Progression\Old\land_of_dragons\Riku.png" />
     <Resource Include="Images\Progression\Old\agrabah\BlizzardLord.png" />
     <Resource Include="Images\Progression\Old\agrabah\VolcanoLord.png" />
     <Resource Include="Images\Progression\Old\the_world_that_never_was\ArmoredXemnas2.png" />
