color picker upgrade

--- a/KhTracker/App.config
+++ b/KhTracker/App.config
@@ -263,6 +263,18 @@
             <setting name="BingoColor" serializeAs="String">
                 <value>#FF6700CC</value>
             </setting>
+            <setting name="HintColor" serializeAs="String">
+                <value>#FFFFFFFF</value>
+            </setting>
+			<setting name="BattleshipMissColor" serializeAs="String">
+				<value>#FF87CEFA</value>
+			</setting>
+			<setting name="BattleshipHitColor" serializeAs="String">
+				<value>#FFFF0000</value>
+			</setting>
+			<setting name="BattleshipSunkColor" serializeAs="String">
+				<value>#FFFFC0CB</value>
+			</setting>
             <setting name="GridWindowBingoLogic" serializeAs="String">
                 <value>True</value>
             </setting>
