--- a/KhTracker/KhTracker.csproj
+++ b/KhTracker/KhTracker.csproj
@@ -347,6 +347,12 @@
     <Content Include="CustomImages\Progression\agrabah\elemental_lords.png" />
     <Content Include="CustomImages\Progression\agrabah\jafar.png" />
     <Content Include="CustomImages\Progression\agrabah\lexaeus.png" />
+    <Resource Include="Images\Progression\Old\the_world_that_never_was\xemnas_data.png" />
+    <Resource Include="Images\Progression\Old\space_paranoids\larxene_data.png" />
+    <Resource Include="Images\Progression\Old\olympus_coliseum\zexion_data.png" />
+    <Resource Include="Images\Progression\Old\halloween_town\vexen_data.png" />
+    <Resource Include="Images\Progression\Old\disney_castle\marluxia_data.png" />
+    <Resource Include="Images\Progression\Old\agrabah\lexaeus_data.png" />
     <Resource Include="Images\Progression\Old\the_world_that_never_was\xemnas.png" />
     <Resource Include="Images\Progression\Old\the_world_that_never_was\data_final_xemnas.png" />
     <Resource Include="Images\Progression\Old\beast%27s_castle\ShadowStalker.png" />
