--- a/.gitignore
+++ b/.gitignore
@@ -337,3 +337,4 @@ MigrationBackup/
 /KhTracker/Images/ReportTest3.png
 /KhTracker/Images/ReportTest2.png
 /KhTracker/Images/ReportTest1.png
+/KhTracker/KhTracker_TemporaryKey.pfx
