--- a/KhTracker/App.config
+++ b/KhTracker/App.config
@@ -32,7 +32,7 @@
                 <value>True</value>
             </setting>
             <setting name="Atlantica" serializeAs="String">
-                <value>False</value>
+                <value>True</value>
             </setting>
             <setting name="WindowX" serializeAs="String">
                 <value>0</value>
@@ -264,6 +264,9 @@
                 <value>True</value>
             </setting>
             <setting name="GridWindowBattleshipLogic" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="WorldChestLock" serializeAs="String">
                 <value>False</value>
             </setting>
         </KhTracker.Properties.Settings>
