Check Counter + Num Squares UI + New Check Inclusion

--- a/KhTracker/App.config
+++ b/KhTracker/App.config
@@ -249,7 +249,7 @@
                 <value>13</value>
             </setting>
             <setting name="GridWindowNumUnlocks" serializeAs="String">
-                <value>11</value>
+                <value>26</value>
             </setting>
             <setting name="UnmarkedColor" serializeAs="String">
                 <value>#FF696969</value>
@@ -316,6 +316,9 @@
             </setting>
             <setting name="ColorWindowX" serializeAs="String">
                 <value>0</value>
+            </setting>
+            <setting name="GridWindowNumChestLocks" serializeAs="String">
+                <value>15</value>
             </setting>
         </KhTracker.Properties.Settings>
     </userSettings>
