fog of war implemented

--- a/KhTracker/App.config
+++ b/KhTracker/App.config
@@ -329,6 +329,9 @@
             <setting name="BattleshipRandomSizes" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="FogOfWarSpan" serializeAs="String">
+                <value>{"W": 1, "E": 1, "N": 1, "S": 1, "NW": 0, "NE": 0, "SW": 0, "SE": 0}</value>
+            </setting>
         </KhTracker.Properties.Settings>
     </userSettings>
   <runtime>
