change ship count in battleships

--- a/KhTracker/App.config
+++ b/KhTracker/App.config
@@ -326,11 +326,11 @@
             <setting name="BattleshipRandomCount" serializeAs="String">
                 <value>False</value>
             </setting>
-            <setting name="BattleshipRandomSizes" serializeAs="String">
-                <value>False</value>
-            </setting>
             <setting name="FogOfWarSpan" serializeAs="String">
                 <value>{"W": 1, "E": 1, "N": 1, "S": 1, "NW": 0, "NE": 0, "SW": 0, "SE": 0}</value>
+            </setting>
+            <setting name="ShipSizes" serializeAs="String">
+                <value>{2, 3, 3, 4, 5}</value>
             </setting>
         </KhTracker.Properties.Settings>
     </userSettings>
