fix ship sizes default property

--- a/KhTracker/App.config
+++ b/KhTracker/App.config
@@ -326,7 +326,7 @@
                 <value>{"W": 1, "E": 1, "N": 1, "S": 1, "NW": 0, "NE": 0, "SW": 0, "SE": 0}</value>
             </setting>
             <setting name="ShipSizes" serializeAs="String">
-                <value>{2, 3, 3, 4, 5}</value>
+                <value>[2, 3, 3, 4, 5]</value>
             </setting>
             <setting name="MaxShipCount" serializeAs="String">
                 <value>5</value>
