--- a/KhTracker/KhTracker.csproj
+++ b/KhTracker/KhTracker.csproj
@@ -383,6 +383,72 @@
     <Content Include="CustomImages\Progression\agrabah\elemental_lords.png" />
     <Content Include="CustomImages\Progression\agrabah\jafar.png" />
     <Content Include="CustomImages\Progression\agrabah\lexaeus.png" />
+    <Resource Include="Images\Grid\Progression\Min\twilight_town\Dusks.png" />
+    <Resource Include="Images\Grid\Bosses\Min\Riku.png" />
+    <Resource Include="Images\Grid\Overlays\Numbers\AllDrive2.png" />
+    <Resource Include="Images\Grid\Overlays\Numbers\AllDrive3.png" />
+    <Resource Include="Images\Grid\Overlays\Numbers\AllDrive4.png" />
+    <Resource Include="Images\Grid\Overlays\Numbers\AllDrive5.png" />
+    <Resource Include="Images\Grid\Overlays\Numbers\AllDrive6.png" />
+    <Resource Include="Images\Grid\Overlays\Numbers\AllDrive7.png" />
+    <Resource Include="Images\Grid\Progression\Min\100_acre_wood\balloon_bounce.png" />
+    <Resource Include="Images\Grid\Progression\Min\100_acre_wood\blustery_rescue.png" />
+    <Resource Include="Images\Grid\Progression\Min\100_acre_wood\expotition.png" />
+    <Resource Include="Images\Grid\Progression\Min\100_acre_wood\hunny_pot.png" />
+    <Resource Include="Images\Grid\Progression\Min\100_acre_wood\hunny_slider.png" />
+    <Resource Include="Images\Grid\Progression\Min\agrabah\abu.png" />
+    <Resource Include="Images\Grid\Progression\Min\agrabah\chasm_of_challenges.png" />
+    <Resource Include="Images\Grid\Progression\Min\agrabah\elemental_lords.png" />
+    <Resource Include="Images\Grid\Progression\Min\agrabah\magic_switches.png" />
+    <Resource Include="Images\Grid\Progression\Min\agrabah\treasure_room.png" />
+    <Resource Include="Images\Grid\Progression\Min\atlantica\concert.png" />
+    <Resource Include="Images\Grid\Progression\Min\atlantica\tutorial.png" />
+    <Resource Include="Images\Grid\Progression\Min\atlantica\ursula.png" />
+    <Resource Include="Images\Grid\Progression\Min\beast%27s_castle\dragoons.png" />
+    <Resource Include="Images\Grid\Progression\Min\disney_castle\minnie.png" />
+    <Resource Include="Images\Grid\Progression\Min\disney_castle\steamboat_pete.png" />
+    <Resource Include="Images\Grid\Progression\Min\disney_castle\windows_of_time.png" />
+    <Resource Include="Images\Grid\Progression\Min\halloween_town\candy_cane_lane.png" />
+    <Resource Include="Images\Grid\Progression\Min\halloween_town\children.png" />
+    <Resource Include="Images\Grid\Progression\Min\halloween_town\presents.png" />
+    <Resource Include="Images\Grid\Progression\Min\hollow_bastion\1000_heartless.png" />
+    <Resource Include="Images\Grid\Progression\Min\hollow_bastion\ansem%27s_study.png" />
+    <Resource Include="Images\Grid\Progression\Min\hollow_bastion\bailey.png" />
+    <Resource Include="Images\Grid\Progression\Min\hollow_bastion\corridors.png" />
+    <Resource Include="Images\Grid\Progression\Min\hollow_bastion\dancers.png" />
+    <Resource Include="Images\Grid\Progression\Min\hollow_bastion\final_fantasy.png" />
+    <Resource Include="Images\Grid\Progression\Min\hollow_bastion\first_fight.png" />
+    <Resource Include="Images\Grid\Progression\Min\hollow_bastion\second_fight.png" />
+    <Resource Include="Images\Grid\Progression\Min\hollow_bastion\transport.png" />
+    <Resource Include="Images\Grid\Progression\Min\land_of_dragons\missions.png" />
+    <Resource Include="Images\Grid\Progression\Min\land_of_dragons\mountain_climb.png" />
+    <Resource Include="Images\Grid\Progression\Min\land_of_dragons\snipers.png" />
+    <Resource Include="Images\Grid\Progression\Min\land_of_dragons\summit.png" />
+    <Resource Include="Images\Grid\Progression\Min\land_of_dragons\village_cave.png" />
+    <Resource Include="Images\Grid\Progression\Min\olympus_coliseum\demyx.png" />
+    <Resource Include="Images\Grid\Progression\Min\olympus_coliseum\dusks.png" />
+    <Resource Include="Images\Grid\Progression\Min\olympus_coliseum\the_lock.png" />
+    <Resource Include="Images\Grid\Progression\Min\olympus_coliseum\urns.png" />
+    <Resource Include="Images\Grid\Progression\Min\port_royal\explosives.png" />
+    <Resource Include="Images\Grid\Progression\Min\port_royal\gamblers.png" />
+    <Resource Include="Images\Grid\Progression\Min\port_royal\isla_de_muerta.png" />
+    <Resource Include="Images\Grid\Progression\Min\port_royal\medallions.png" />
+    <Resource Include="Images\Grid\Progression\Min\port_royal\town.png" />
+    <Resource Include="Images\Grid\Progression\Min\pride_lands\hyenas.png" />
+    <Resource Include="Images\Grid\Progression\Min\pride_lands\oasis.png" />
+    <Resource Include="Images\Grid\Progression\Min\pride_lands\timon_and_pumba.png" />
+    <Resource Include="Images\Grid\Progression\Min\simulated_twilight_town\computer_room.png" />
+    <Resource Include="Images\Grid\Progression\Min\simulated_twilight_town\munny_pouch.png" />
+    <Resource Include="Images\Grid\Progression\Min\simulated_twilight_town\pod_room.png" />
+    <Resource Include="Images\Grid\Progression\Min\simulated_twilight_town\struggle.png" />
+    <Resource Include="Images\Grid\Progression\Min\space_paranoids\dataspace.png" />
+    <Resource Include="Images\Grid\Progression\Min\space_paranoids\solar_sailer.png" />
+    <Resource Include="Images\Grid\Progression\Min\the_world_that_never_was\kingdom_hearts.png" />
+    <Resource Include="Images\Grid\Progression\Min\twilight_town\berserkers.png" />
+    <Resource Include="Images\Grid\Progression\Min\twilight_town\betwixt_and_between.png" />
+    <Resource Include="Images\Grid\Progression\Min\twilight_town\mickey.png" />
+    <Resource Include="Images\Grid\Progression\Min\twilight_town\mysterious_tower.png" />
+    <Resource Include="Images\Grid\Bosses\Min\ShadowStalker.png" />
     <Resource Include="Images\Grid\Checks\Min\chest_ag.png" />
     <Resource Include="Images\Grid\Checks\Min\chest_bc.png" />
     <Resource Include="Images\Grid\Checks\Min\chest_cor.png" />
@@ -443,7 +509,7 @@
     <Resource Include="Images\Grid\Bosses\Min\Org_FinalXemnas.png" />
     <Resource Include="Images\Grid\Bosses\Min\ArmorXemnas.png" />
     <Resource Include="Images\Grid\Bosses\Min\HostileProgram.png" />
-    <Resource Include="Images\Grid\Bosses\Min\MCP.png" />
+    <Resource Include="Images\Grid\Progression\Min\space_paranoids\MCP.png" />
     <Resource Include="Images\Grid\Bosses\Min\Sark.png" />
     <Resource Include="Images\Grid\Bosses\Min\Pete.png" />
     <Resource Include="Images\Grid\Overlays\Worlds\Absent.png" />
