Make fog of war question mark a toggle

--- a/KhTracker/App.config
+++ b/KhTracker/App.config
@@ -334,6 +334,9 @@
             <setting name="MinShipCount" serializeAs="String">
                 <value>5</value>
             </setting>
+            <setting name="FogIconSetting" serializeAs="String">
+                <value>False</value>
+            </setting>
         </KhTracker.Properties.Settings>
     </userSettings>
 </configuration>
