Objective Window Tracking groundwork

--- a/KhTracker/App.config
+++ b/KhTracker/App.config
@@ -340,6 +340,18 @@
             <setting name="GridCustomImages" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="ObjectiveWindowHeight" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="ObjectiveWindowWidth" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="ObjectiveWindowX" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="ObjectiveWindowY" serializeAs="String">
+                <value>0</value>
+            </setting>
         </KhTracker.Properties.Settings>
     </userSettings>
 </configuration>
