--- a/KhTracker/KhTracker.csproj
+++ b/KhTracker/KhTracker.csproj
@@ -134,6 +134,9 @@
     <Compile Include="Windows\ColorPicker.xaml.cs">
       <DependentUpon>ColorPicker.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Windows\ObjectivesWindow.xaml.cs">
+      <DependentUpon>ObjectivesWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Windows\SeedNamer.xaml.cs">
       <DependentUpon>SeedNamer.xaml</DependentUpon>
     </Compile>
@@ -165,6 +168,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Windows\ColorPicker.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Windows\ObjectivesWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -614,6 +621,12 @@
     <Content Include="CustomImages\Progression\agrabah\elemental_lords.png" />
     <Content Include="CustomImages\Progression\agrabah\jafar.png" />
     <Content Include="CustomImages\Progression\agrabah\lexaeus.png" />
+    <Resource Include="Images\Grid\Objectives\Min\Puzzle.png" />
+    <Resource Include="Images\Grid\Objectives\Min\CerberusCup.png" />
+    <Resource Include="Images\Grid\Objectives\Min\GoddessCup.png" />
+    <Resource Include="Images\Grid\Objectives\Min\PainandPanicCup.png" />
+    <Resource Include="Images\Grid\Objectives\Min\TitanCup.png" />
+    <Resource Include="Images\Grid\Objectives\Min\EndOfCoR.png" />
     <Resource Include="Images\Grid\Overlays\Numbers\QuestionMark.png" />
     <Resource Include="Images\Progression\Min\twilight_town\Creepers.png" />
     <Resource Include="Images\Progression\Min\the_world_that_never_was\FinalXemnas.png" />
@@ -1745,7 +1758,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="BuildEvents\" />
-    <Folder Include="Images\Grid\Objectives\" />
   </ItemGroup>
   <PropertyGroup>
     <PostBuildEvent>
