objective tracker fixes - changed Ursula's Revenge and A New Day tracking to hopefully track on completion, not entering. - changed IDs used to check for all 4 OC cups tracking - edited UpdateSupportingTrackers to not pass certain boss info to objective tracker.

--- a/KhTracker/App.config
+++ b/KhTracker/App.config
@@ -352,6 +352,15 @@
             <setting name="ObjectiveWindowY" serializeAs="String">
                 <value>0</value>
             </setting>
+            <setting name="ObjectiveTelevo" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="ObjectiveSonic" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="ObjectiveCustom" serializeAs="String">
+                <value>False</value>
+            </setting>
         </KhTracker.Properties.Settings>
     </userSettings>
 </configuration>
