--- a/KhTracker/KhTracker.csproj
+++ b/KhTracker/KhTracker.csproj
@@ -668,6 +668,8 @@
     <Content Include="CustomImages\Progression\agrabah\elemental_lords.png" />
     <Content Include="CustomImages\Progression\agrabah\jafar.png" />
     <Content Include="CustomImages\Progression\agrabah\lexaeus.png" />
+    <Resource Include="Images\Grid\Objectives\Old\DecoyPresents.png" />
+    <Resource Include="Images\Grid\Objectives\Old\Presents.png" />
     <Resource Include="Images\Grid\Objectives\Old\Puzzle.png" />
     <Resource Include="Images\Grid\Objectives\Old\PainandPanicCup.png" />
     <Resource Include="Images\Grid\Objectives\Old\GoddessCup.png" />
